# s3uow

./: .gitignore  LICENSE  README.md  mkdocs.yml  project_context.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: engineering-task.yaml  feature-request.yaml  question.yaml
.github/workflows/: coverage-report.yml  docs.yml  publish.yml
docs/: README.md  api.md  help.md  index.md  install.md
docs/advanced_features/: reconciler.md
docs/backends/: in-memory.md
docs/connectors/: in-memory.md  s3.md
docs/core_concepts/: backends.md  connectors.md  files.md  overview.md  reconciler.md  repositories.md  uow.md
docs/examples/uow/: multiple_connectors.md  separation_of_concerns.md
docs/repositories/: delete.md  get.md  put.md
docs/stylesheets/: custom.css
src/fennflow/: __init__.py  _base_exception.py  _datetime.py  _decorators.py  _new_types.py  _path.py  _resolver.py  _sentinel.py
src/fennflow/_operations/: dto.py  enums.py  executor.py  registry.py  tmp_path_builder.py
src/fennflow/_operations/context/: abstract.py  create.py  delete.py  put.py  types.py
src/fennflow/_operations/flows/: abstract.py  create.py  delete.py  put.py
src/fennflow/_reconciler/: _orchestrator.py  config.py  core.py  enums.py  exceptions.py
src/fennflow/backends/: __init__.py  enums.py  exceptions.py  factory.py  registry.py  responses.py
src/fennflow/backends/abstract/: annotations.py  base.py  config.py  exceptions.py
src/fennflow/backends/in_memory/: __init__.py  _select.py  base.py  config.py
src/fennflow/backends/types/: config.py
src/fennflow/connectors/: __init__.py  exceptions.py  factory.py  registry.py
src/fennflow/connectors/abstract/: __init__.py  base.py
src/fennflow/connectors/in_memory/: __init__.py  config.py  connector.py
src/fennflow/connectors/s3/: __init__.py  client.py  config.py  connector.py
src/fennflow/connectors/types/: config.py
src/fennflow/core/: __init__.py
src/fennflow/core/configs/: base.py
src/fennflow/exceptions/: __init__.py
src/fennflow/files/: __init__.py  adapter.py  factory.py  registry.py  types.py
src/fennflow/files/exceptions/: __init__.py  base.py  cannot_parse_extension.py  extension_cannot_be_guessed.py  filename_and_mediatype_both_none.py  filename_is_none.py  folder_path_is_none.py  media_type_cannot_be_guessed.py  storage_prefix_is_none.py
src/fennflow/files/media/: __init__.py  audio_content.py  base.py  binary_content.py  image_content.py  json_content.py  pdf_content.py  text_content.py  url_content.py  video_content.py
src/fennflow/files/media/abstract/: content.py  from_content.py
src/fennflow/files/protocols/: has_data.py  has_data_and_ext.py  has_data_and_ext_kwargs.py  has_data_and_ext_obj.py  has_ext.py
src/fennflow/files/responses/: base.py  list.py
src/fennflow/files/utils/: determine_filename.py  random_filename.py
src/fennflow/reconciler/: __init__.py  _orchestrator.py  config.py  core.py  exceptions.py
src/fennflow/repositories/: __init__.py  at.py  base.py  create.py  delete.py  exceptions.py  get.py  list.py  put.py
src/fennflow/repositories/_validation_mixins/: validate_duplicate.py
src/fennflow/repositories/fields/: __init__.py  base.py  s3.py
src/fennflow/uow/: __init__.py  base.py  core.py  inspector.py
src/foxflow/files/responses/: base.py
src/s3uow/files/: adapter.py  enums.py  factory.py  registry.py  types.py
src/s3uow/files/exceptions/: base.py  cannot_parse_extension.py  extension_cannot_be_guessed.py  filename_and_mediatype_both_none.py  media_type_cannot_be_guessed.py
src/s3uow/files/media/: __init__.py  audio_content.py  base.py  binary_content.py  image_content.py  json_content.py  pdf_content.py  text_content.py  url_content.py  video_content.py
src/s3uow/files/media/abstract/: content.py  from_content.py
src/s3uow/files/protocols/: has_data.py  has_data_and_ext.py  has_data_and_ext_kwargs.py  has_data_and_ext_obj.py  has_ext.py
src/s3uow/files/responses/: base.py
src/s3uow/files/utils/: determine_filename.py  random_filename.py
tests/: conftest.py
tests/backends/connectors/in_memory/: test_list_objects.py
tests/backends/in_memory/: test_clear_session.py  test_lock.py  test_select.py
tests/files/: test_creation.py
tests/reconcile/: test_frequency_strategies.py  test_reconcile.py  test_reconciler.py
tests/repositories/: conftest.py  test_at.py  test_create.py  test_delete.py  test_get.py  test_list.py  test_put.py
tests/uow/: test_commit.py  test_compensation.py  test_rollback.py
