[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fennflow"
dynamic = ["version"]           # ← важно!
description = "Atomic-like S3 Framework with Saga Pattern, the Pydantic way"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.0.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fennflow"]

[tool.hatch.version]
path = "src/fennflow/__init__.py"